# text_file_read_and_refactor_mcp

./: .gitignore  LICENSE.md  NOTICE  README.md  glama.json  pyproject.toml  pytest.ini  requirements.txt
tests/: test_server_tools.py
text_file_read_and_refactor_mcp/: __init__.py  __main__.py
text_file_read_and_refactor_mcp/versions/: __init__.py
text_file_read_and_refactor_mcp/versions/v_1/: __init__.py  server.py
